    the contents of result.inserted_primary_key.
    [ticket:2006]

  - Bind parameters present in the "columns clause" of a select
    are now auto-labeled like other "anonymous" clauses,
    which among other things allows their "type" to be meaningful
    when the row is fetched, as in result row processors.

  - TypeDecorator is present in the "sqlalchemy" import space.

-sqlite
  - SQLite dialect now uses `NullPool` for file-based databases
    [ticket:1921]

- mssql
  - the String/Unicode types, and their counterparts VARCHAR/
    NVARCHAR, emit "max" as the length when no length is 
    specified.   This makes it more compatible with Postgresql's
    VARCHAR type which is similarly unbounded when no length
    specified.

- mysql
  - New DBAPI support for pymysql, a pure Python port
    of MySQL-python.  [ticket:1991]

- firebird
  - Some adjustments so that Interbase is supported as well.
    FB/Interbase version idents are parsed into a structure
    such as (8, 1, 1, 'interbase') or (2, 1, 588, 'firebird')
    so they can be distinguished. [ticket:1885]

- drizzle
  - New dialect for Drizzle, a MySQL variant.  Uses MySQL-python
    for the DBAPI.  [ticket:2003]

0.6.7
=====
- orm
  - Added a `name` argument to `Query.subquery()`, to allow
    a fixed name to be assigned to the alias object.
    [ticket:2030]

  - A warning is emitted when a joined-table inheriting mapper
    has no primary keys on the locally mapped table
    (but has pks on the superclass table).  [ticket:2019]

  - Fixed bug where "middle" class in a polymorphic hierarchy
    would have no 'polymorphic_on' column if it didn't also
    specify a 'polymorphic_identity', leading to strange
    errors upon refresh, wrong class loaded when querying
    from that target. Also emits the correct WHERE criterion
    when using single table inheritance. [ticket:2038]

 - Fixed bug where a column with a SQL or server side default
   that was excluded from a mapping with include_properties